# tracker_bot

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: checking.yaml  release.yaml
src/: alembic.ini  cli.py  config.py  dto.py  exceptions.py  factory.py  states.py  ui_commands.py  utils.py
src/cron/: track.py
src/db/: mixins.py  models.py  provider.py  schemas.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023_08_30_75888053a698_init_db.py  2023_09_09_1a790c0cd3e9_init_db.py
src/db/repositories/: base.py  track.py  user.py
src/dialogs/: __init__.py  commands.py  main_menu.py  registration.py  report_generator.py  settings_menu.py  track_time.py  weekend.py
src/middlewares/: db.py
src/windows/: choose_period.py  confirm.py  main_menu.py  set_frequency.py  set_period.py  set_time.py  set_time_zone.py  settings.py  track_time.py  weekend.py
tracker_bot/: arguments.py  deps.py
