[tool.poetry]
name = "tracker-bot"
version = "0.1.0"
description = "Bot tracking time of workers"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0rc2"
aiogram-dialog = "2.0b22"
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.3"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = "src"
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true

[tool.ruff]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105","D107", "D211", "D212", "ANN101", "PLR0913", "ARG001", "ARG005", "RUF001"]
fixable = ["ALL"]
line-length = 90
target-version = "py311"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.flake8-self]
ignore-names = ["_getframe"]

[tool.ruff.isort]
known-local-folder = ["src"]

[tool.ruff.pep8-naming]
ignore-names = ["__tablename__"]