[tool.poetry]
name = "tracker-bot"
version = "0.1.0"
description = "Bot tracking time of workers"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0rc2"
aiogram-dialog = "2.0b22"
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.3"
redis = "^5.0.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.5.1"
black = "^23.9.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = "src"
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true
