[tool.poetry]
name = "tracker-bot"
version = "0.1.0"
description = "Bot tracking time of workers"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
aiogram-dialog = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = "^5.0.1"
aiomisc = "^17.3.41"
aiomisc-dependency = "^0.1.20"
configargparse = "^1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = "src"
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

